testsuite/bsc.typechecker/kind/mismatch/ProvisoBaseMismatch_TopLevel.bsv.bsc-out.expected
checking package dependencies
compiling ProvisoBaseMismatch_TopLevel.bsv
Error: "ProvisoBaseMismatch_TopLevel.bsv", line 1, column 44: (T0027)
  The numeric type `t' was found where a value type was expected.
