testsuite/bsc.typechecker/kind/mismatch/ProvisoBaseMismatch_TopLevel.bsv
module mkProvisoBaseMismatch_TopLevel(Reg#(t))
   provisos(Add#(1,j,t));
endmodule
